# sudec_rh

./: .gitignore  autenticate.py  config.py  drive.py  home.py  pyproject.toml  requirements.txt  st_procs.py  test_home.py
Inactive/: 10_ Teste_form.py  11_Envia para Sheets.py  import_data.py  pyproject.toml
adm/: 9_🐞 Tabelas Completas.py  base64credentials.py  gspread_tuto.py  todo.txt  venv_howto.txt
antigos/: Afastamentos.py
datahandlers/: abono.py  servidor.py
datamodels/: abono.py  sudec-rh_classes.py  sudec_rh_classes.py
pages/: 11_Envia para Sheets.py  1_👨‍👦‍👦 Servidores.py  2_👮‍♂️ Cargos.py  3_👨 Exibir Servidor.py  4_🏖 Afastamentos.py  4_🏖 Exibir Afastamentos.py  5_✏ Inserir ou alterar dados.py  6_Cadastrar Abono.py  6_⚠ Pendências.py  9_🐞 Tabelas Completas.py  Afastamentos.py  Cargos.py  Exibir Servidor.py  Inserir ou alterar dados.py  Servidores.py  Tabelas Completas.py  todo.txt
paginas/: adm_import_servidores.py  adm_tabelas.py  cadastro_abono.py  cadastro_alterar_servidor.py  cadastro_novo_servidor.py  cadastro_servidor.py  cadastros_google.py  exibir_afastamentos.py  exibir_cargos.py  exibir_pendencias.py  exibir_servidor.py  exibir_servidores.py  inicio.py
