[project]
name = "sudec-rh"
version = "0.1.0"
description = "Aplicativo de gestão de servidores da SUDEC DF"
authors = [
    {name = "Ener Diniz Beckmann",email = "enerdb@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread (>=6.1.4,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
