[project]
name = "sudec-rh"
version = "0.1.0"
description = ""
authors = [
    {name = "Ener Diniz Beckmann",email = "enerdb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client (>=2.160.0,<3.0.0)",
    "gspread (>=6.1.4,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "streamlit (>=1.41.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
